# PITNN_dab_3_3_kw

./: CMakeLists.txt  DeployedController.docx  LICENSE.txt  PITNN_LICENSE.docx  PITNN_README.docx  README.md  README_multivideo_refactor.txt  pitnn_ablation.py  pitnn_c2000.h  pitnn_dab.py  pitnn_deploy.py  pitnn_inference.cpp  pitnn_inference.py  pitnn_inspect_exports.py  pitnn_onnx_inference.py  video_manifest.json
Documents/: DeployedController.docx  PITNN_LICENSE.docx  PITNN_README.docx  PLECS_Integration_README.docx
Integration/: PITNNController.m  pitnn_cscript.h  pitnn_plecs_cosim.py  pitnn_socket_client.h  pitnn_socket_server.py
PLECS/: pitnn_dab_checkpoint.pt  pitnn_plecs_pi_tuner.py  pitnn_plecs_server.py  readMe.md
PLECS/TPS_Gate_generator/: TPS_Gate_generator_output.c  TPS_gate_generator_declaration.c
PLECS/TPS_PWM_generator/: pitnn_cscript_declarations.c  pitnn_cscript_output.c  pitnn_cscript_start.c  pitnn_cscript_terminate.c
TI_C2000/: pitnn_c2000.c  pitnn_c2000.h  pitnn_c2000_setup.c  pitnn_uart_server.py
